objects/NGCC_Requalification_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Max__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the Lead with this combination need only one time requalification for multiple requalification then mark it as False</description>
        <label>Max</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <description>If can have Lead.SDR_Lead_Owner_New__c or Queue Id. If any new field to be referenced then the format will be Lead.API_NAME</description>
        <label>OwnerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>Just the reference to whom the lead need to assigned</description>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Lead requalification specific settings have been managed in this custom setting object which maps different requalification criteria with desired set of owner to be assigned.</description>
    <label>NGCC Requalification Settings</label>
</CustomObject>